# glfw_model

./: CMakeLists.txt  Main.cpp  README.md
lib/: glfw3-d.lib  glfw3-o.lib  glfw3.lib
